--- a/modules/apps/content-dashboard/content-dashboard-test/build.gradle
+++ b/modules/apps/content-dashboard/content-dashboard-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	testIntegrationCompile group: "javax.portlet", name: "portlet-api", version: "3.0.1"
+	testIntegrationCompile project(":apps:application-list:application-list-api")
 	testIntegrationCompile project(":apps:journal:journal-api")
 	testIntegrationCompile project(":apps:journal:journal-test-util")
 	testIntegrationCompile project(":core:registry-api")
